--- a/src/blocks/content.css
+++ b/src/blocks/content.css
@@ -1,14 +1,12 @@
 .content {
   box-sizing: border-box;
   padding: 0 20px;
-  flex-grow: 1;
+  width: 100%;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 629px) {
   .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding: 0 16px;
   }
 }
