--- a/src/blocks/content.css
+++ b/src/blocks/content.css
@@ -1,12 +1,14 @@
 .content {
   box-sizing: border-box;
   padding: 0 20px;
-  width: 100%;
-  margin: 0 auto;
+  flex-grow: 1;
 }
 
 @media screen and (max-width: 629px) {
   .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 0 16px;
   }
 }
