--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -55,11 +55,11 @@
 /* =========================================================
    INPUTS & LABELS
    ========================================================= */
-.modal__label {
+.modal__input-label {
   padding-bottom: 8px;
   font-size: 16px;
   font-weight: 500;
-  color: rgba(33, 33, 33, 0.7);
+  color: #212121b2;
 }
 
 .modal__inputs {
